# burgerbot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  auslander.py  burgerbot.py  config.py  fetch_services.py  fetcher.py  parser.py  parser2.py  pyproject.toml  services.json  services.py
.github/workflows/: deploy.yaml
burgerbot/: __main__.py  bot.py  config.py  model.py  services.py  urls.py
burgerbot/fetcher/: Fetcher.py  LiveFetcher.py  RateLimitedException.py  __init__.py
burgerbot/parser/: CalendarParser.py  Parser.py  ServiceParser.py  __init__.py
script/: update_fixtures.py  update_services.py
tests/: FixtureFetcher.py  test_parser.py
tests/fixtures/service/: 120335.html  120686.html  120702.html  120703.html  120914.html  121469.html  121598.html  121627.html  121701.html  121921.html  318998.html  324280.html  326798.html  327537.html
