[tool.poetry]
name = "burgerbot"
version = "0.1.0"
description = ""
authors = ["sonac <sonag007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = {extras = ["socks"], version = "^2.26.0"}
beautifulsoup4 = "^4.9.3"
python-telegram-bot = "^13.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
